--- a/friends.html
+++ b/friends.html
@@ -21,13 +21,60 @@
 
   <nav class="nav">
     <ul class="nav__list">
-      <li class="nav_btn"><a class="nav__link"href="#"><i class="fa-solid fa-user fa-2x"></i></a></li>
-      <li class="nav__btn"><a class="nav__link" href="#"><i class="fa-regular fa-comments fa-2x" ></i></a></li>
+      <li class="nav_btn"><a href="friends.html" class="nav__link"><i class="fa-solid fa-user fa-2x"></i></a></li>
+      <li class="nav__btn"><a class="nav__link" href="#">
+        <span class="nav__notification chat">1</span><i class="fa-regular fa-comments fa-2x" ></i></a></li>
       <li class="nav__btn"><a class="nav__link" href="#"><i class="fa-solid fa-magnifying-glass fa-2x"></i></a></li>
-      <li class="nav__btn"><a class="nav__link" href="#"><i class="fa-regular fa-window-minimize fa-2x"></i></i></a></li>
+      <li class="nav__btn"><a class="nav__link" href="#">
+        <div class="nav__notification eclipse"></div><i class="fa-solid fa-bars fa-2x"></i></a></li>
     </ul>
   </nav>
 
+  <header class="screen-header">
+    <h1 class="screen-header__title">친구</h1>
+    <div class="screen-header__icons">
+      <span><i class="fa-solid fa-magnifying-glass fa-lg"></i></span>
+      <span><i class="fa-solid fa-music fa-lg"></i></span>
+      <span><i class="fa-solid fa-gear fa-lg"></i></span>
+    </div>
+  </header>
+
+  <a id="friends-display-link">
+    <i class="fa-solid fa-circle-info"></i>  Friends' Names Display <i class="fa-solid fa-chevron-right fa-xs"></i>
+  </a>
+
+  <main class="friends__screen">
+    <div class="user-component">
+      <div class="user-component__column">
+        <img src="http://file3.instiz.net/data/cached_img/upload/2019/12/09/17/5e9b1988437ea3f98cf15f06e886350f.jpg" class="user-component__avatar--xl"/>
+        <div class="user-component__text">
+          <h4 class="user-component__title">이서현</h4>
+          <!--<h6 class="user-component__subtitle">상태 메세지</h6>-->
+        </div>
+      </div>
+      <div class="user-component__column"></div>
+    </div>
+    
+    <div class="friends-screen__channel">
+      <div class="friends-screen__channel-header">
+        <span>Channel</span>
+        <i class="fas fa-chevron-up fa-xs"></i>
+      </div>
+      <div class="user-component">
+        <div class="user-component__column">
+          <img src="http://file3.instiz.net/data/cached_img/upload/2019/12/09/17/5e9b1988437ea3f98cf15f06e886350f.jpg" class="user-component__avatar--sm"/>
+          <div class="user-component__text">
+            <h4 class="user-component__title user-component__title--not-bold">Channel</h4>
+            <!--<h6 class="user-component__subtitle">상태 메세지</h6>-->
+          </div>
+        </div>
+        <div class="user-component__column">
+          <span>2</span>
+          <i class="fas fa-chevron-right fa-xs"></i>
+        </div>
+      </div>
+    </div>
+  </main>
   <script src="https://kit.fontawesome.com/4d6598f145.js" crossorigin="anonymous"></script>
 </body>
 </html>
