--- a/friends.html
+++ b/friends.html
@@ -22,10 +22,10 @@
   <nav class="nav">
     <ul class="nav__list">
       <li class="nav_btn"><a href="friends.html" class="nav__link"><i class="fa-solid fa-user fa-2x"></i></a></li>
-      <li class="nav__btn"><a class="nav__link" href="#">
+      <li class="nav__btn"><a class="nav__link" href="chats.html">
         <span class="nav__notification chat">1</span><i class="fa-regular fa-comments fa-2x" ></i></a></li>
-      <li class="nav__btn"><a class="nav__link" href="#"><i class="fa-solid fa-magnifying-glass fa-2x"></i></a></li>
-      <li class="nav__btn"><a class="nav__link" href="#">
+      <li class="nav__btn"><a class="nav__link" href="find.html"><i class="fa-solid fa-magnifying-glass fa-2x"></i></a></li>
+      <li class="nav__btn"><a class="nav__link" href="more.html">
         <div class="nav__notification eclipse"></div><i class="fa-solid fa-bars fa-2x"></i></a></li>
     </ul>
   </nav>
@@ -69,8 +69,11 @@
           </div>
         </div>
         <div class="user-component__column">
-          <span>2</span>
-          <i class="fas fa-chevron-right fa-xs"></i>
+          <div>
+            <span>2</span>
+            <i class="fas fa-chevron-right fa-xs"></i>
+          </div>
+          
         </div>
       </div>
     </div>
