--- a/find.html
+++ b/find.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Elbow Room - 채팅</title>
+  <title>Elbow Room - 찾기</title>
 </head>
 <body>
   <div class="status-bar">
@@ -23,7 +23,7 @@
     <ul class="nav__list">
       <li class="nav_btn"><a href="friends.html" class="nav__link"><i class="fa-regular fa-user fa-2x"></i></a></li>
       <li class="nav__btn"><a class="nav__link" href="chats.html">
-        <span class="nav__notification chat">1</span><i class="fa-solid fa-comments fa-2x"></i></a></li>
+        <span class="nav__notification chat">1</span><i class="fa-regular fa-comments fa-2x"></i></a></li>
       <li class="nav__btn"><a class="nav__link" href="find.html"><i class="fa-solid fa-magnifying-glass fa-2x"></i></a></li>
       <li class="nav__btn"><a class="nav__link" href="more.html">
         <div class="nav__notification eclipse"></div><i class="fa-solid fa-bars fa-2x"></i></a></li>
@@ -31,7 +31,7 @@
   </nav>
 
   <header class="screen-header">
-    <h1 class="screen-header__title">채팅</h1>
+    <h1 class="screen-header__title">찾기</h1>
     <div class="screen-header__icons">
       <span><i class="fa-solid fa-magnifying-glass fa-lg"></i></span>
       <span><i class="fa-solid fa-user-plus fa-lg"></i></span>
@@ -42,20 +42,28 @@
 
 
   <main class="main__screen">
-    <div class="user-component">
-      <div class="user-component__column">
-        <img src="http://file3.instiz.net/data/cached_img/upload/2019/12/09/17/5e9b1988437ea3f98cf15f06e886350f.jpg" class="user-component__avatar"/>
-        <div class="user-component__text">
-          <h4 class="user-component__title">이서현</h4>
-          <h6 class="user-component__subtitle">원하는 채팅 메세지를 남겨주세요!</h6>
-        </div>
-      </div>
-      <div class="user-component__column">
-        <span class="user-component__time">00:00</span>
-        <div class="badge">2</div>
-      </div>
-      
+   <div class="find-icons">
+    <div class="find-icons__icon">
+      <i class="fa-solid fa-qrcode fa-2x"></i>
+      <span>QR Code</span>
     </div>
+    <div class="find-icons__icon">
+      <i class="fa-regular fa-address-book fa-2x"></i>
+      <span>Add by Contacts</span>
+    </div>
+    <div class="find-icons__icon">
+      <i class="fa-regular fa-address-card fa-2x"></i>
+      <span>Add by ID</span>
+    </div>
+    <div class="find-icons__icon">
+      <i class="fa-regular fa-envelope fa-2x"></i>
+      <span>Invite</span>
+    </div>
+   </div>
+   <div class="recommended-friends">
+    <h6 class="recommended-friends__title">추천 친구</h6>
+    <span>추천 친구 없음</span>
+   </div>
   </main>
   <script src="https://kit.fontawesome.com/4d6598f145.js" crossorigin="anonymous"></script>
 </body>
