--- a/find.html
+++ b/find.html
@@ -64,6 +64,29 @@
     <h6 class="recommended-friends__title">추천 친구</h6>
     <span>추천 친구 없음</span>
    </div>
+   <div class="open-chat">
+    <div class="open-chat__header">
+      <h4 class="open-chat__title">오픈 채팅</h4>
+      <span>참가하기 <i class="fa-solid fa-chevron-right"></i></span>
+    </div>
+    <div class="open-post">
+      <div class="open-post__column">
+        <h5 class="open-post__title">#WINNER</h5>
+        <h6 class="open-post__hashtags">#winner#innercircle#friends</h6>
+        <div class="open-post__members">
+          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSXyTaNuffa9Ynmh_bSQm7q-FbBIAWbEcf_2g&usqp=CAU" />
+          <span class="open-post__memer-count">802 members</span>
+          <div class="divider"></div>
+          <span class="open-post__member-status">Active</span>
+        </div>
+      </div>
+      <div class="open-post__column">
+        <div class="open-post__photo">
+          <img src="https://cdn.imweb.me/thumbnail/20220722/bb013d8a2ebee.jpg"/>
+          <div class="open-post__heart-count"><i class="fa-solid fa-heart fa-xs"></i><span>999+</span></div>
+        </div>
+    </div>
+   </div>
   </main>
   <script src="https://kit.fontawesome.com/4d6598f145.js" crossorigin="anonymous"></script>
 </body>
