Add Settings Screen

--- a/more.html
+++ b/more.html
@@ -35,7 +35,7 @@
     <div class="screen-header__icons">
       <span><i class="fa-solid fa-magnifying-glass fa-lg"></i></span>
       <span><i class="fa-solid fa-music fa-lg"></i></span>
-      <span><i class="fa-solid fa-gear fa-lg"></i></span>
+      <span><a href="settings.html"><i class="fa-solid fa-gear fa-lg"></i></a></span>
     </div>
   </header>
 
@@ -84,15 +84,18 @@
       <h4 class="more-suggestions__title">추천 앱</h4>
       <div class="more-suggestions__icons">
         <div class="more-suggestions__icon">
-          <img src="https://play-lh.googleusercontent.com/bKq4X_rvgBB7W8VZvVh3dc7g6W9QkGUlERDOc12PEo27hMvg1TzbjHBoeleINtXmxtI_=w480-h960-rw"/>
-          <span class="more-suggeestions__icon-text">FlipaClip</span>
+          <a href="https://play.google.com/store/apps/details?id=com.vblast.flipaclip">
+            <img src="https://play-lh.googleusercontent.com/bKq4X_rvgBB7W8VZvVh3dc7g6W9QkGUlERDOc12PEo27hMvg1TzbjHBoeleINtXmxtI_=w480-h960-rw"/></a>
+          <span class="more-suggeestions__icon-text">FlipaClip</span>  
         </div>
         <div class="more-suggestions__icon">
-          <img src="https://play-lh.googleusercontent.com/ikbN8scDWum2l6zGkmBrLFMsxOQvzTZT6UcIAYJ_dxBDAv9Ub7YE640cliaooDiWMzs=w480-h960-rw"/>
+          <a href="https://play.google.com/store/apps/details?id=com.realbyteapps.moneymanagerfree">
+            <img src="https://play-lh.googleusercontent.com/ikbN8scDWum2l6zGkmBrLFMsxOQvzTZT6UcIAYJ_dxBDAv9Ub7YE640cliaooDiWMzs=w480-h960-rw"/></a>
           <span class="more-suggeestions__icon-text">편한 가계부</span>
         </div>
         <div class="more-suggestions__icon">
-          <img src="https://play-lh.googleusercontent.com/wef232WTXBw23n4IWkKlXs94UYnak1jtyCRPJ-GQUAPC-t20uPTbmFxYlRMQROjQlA=w480-h960-rw"/>
+          <a href="https://play.google.com/store/apps/details?id=glitchvideoeditor.videoeffects.glitchvideoeffect">
+            <img src="https://play-lh.googleusercontent.com/wef232WTXBw23n4IWkKlXs94UYnak1jtyCRPJ-GQUAPC-t20uPTbmFxYlRMQROjQlA=w480-h960-rw"/></a>
           <span class="more-suggeestions__icon-text">틱톡 편집 효과</span>
         </div>
 
