--- a/chats.html
+++ b/chats.html
@@ -42,20 +42,22 @@
 
 
   <main class="main__screen">
-    <div class="user-component">
-      <div class="user-component__column">
-        <img src="http://file3.instiz.net/data/cached_img/upload/2019/12/09/17/5e9b1988437ea3f98cf15f06e886350f.jpg" class="user-component__avatar"/>
-        <div class="user-component__text">
-          <h4 class="user-component__title">이서현</h4>
-          <h6 class="user-component__subtitle">원하는 채팅 메세지를 남겨주세요!</h6>
+    <a href="chat.html">
+      <div class="user-component">
+        <div class="user-component__column">
+          <img src="http://file3.instiz.net/data/cached_img/upload/2019/12/09/17/5e9b1988437ea3f98cf15f06e886350f.jpg" class="user-component__avatar"/>
+          <div class="user-component__text">
+            <h4 class="user-component__title">이서현</h4>
+            <h6 class="user-component__subtitle">원하는 채팅 메세지를 남겨주세요!</h6>
+          </div>
         </div>
+        <div class="user-component__column">
+          <span class="user-component__time">00:00</span>
+          <div class="badge">1</div>
+        </div>
+        
       </div>
-      <div class="user-component__column">
-        <span class="user-component__time">00:00</span>
-        <div class="badge">1</div>
-      </div>
-      
-    </div>
+    </a>
   </main>
   <script src="https://kit.fontawesome.com/4d6598f145.js" crossorigin="anonymous"></script>
 </body>
