--- a/chat.html
+++ b/chat.html
@@ -60,6 +60,20 @@
       </div>
     </div>
   </main>
+
+  <form class="reply">
+    <div class="reply__column">
+      <i class="fa-solid fa-plus fa-xl"></i>
+    </div>
+    <div class="reply__column">
+      <input type="text"  />
+      <i class="fa-regular fa-face-laugh fa-xl"></i>
+      <button>
+        <i class="fa-solid fa-arrow-up fa-lg"></i>
+      </button>
+    
+    </div>
+  </form>
   <script src="https://kit.fontawesome.com/4d6598f145.js" crossorigin="anonymous"></script>
 </body>
 </html>
