Add Animation & Weather widget

--- a/friends.html
+++ b/friends.html
@@ -72,12 +72,15 @@
           <div>
             <span>2</span>
             <i class="fas fa-chevron-right fa-xs"></i>
-          </div>
-          
+          </div>  
         </div>
       </div>
     </div>
   </main>
+
+  <div id="splash-screen">
+    🎄
+  </div>
   <script src="https://kit.fontawesome.com/4d6598f145.js" crossorigin="anonymous"></script>
 </body>
 </html>
