--- a/more.html
+++ b/more.html
@@ -98,9 +98,29 @@
             <img src="https://play-lh.googleusercontent.com/wef232WTXBw23n4IWkKlXs94UYnak1jtyCRPJ-GQUAPC-t20uPTbmFxYlRMQROjQlA=w480-h960-rw"/></a>
           <span class="more-suggeestions__icon-text">틱톡 편집 효과</span>
         </div>
-
       </div>
      </div>
+
+     <div class="more-weather">
+      <h4 class="more-weather__address">수원시 영통1동</h4>
+      
+      <div class="more-weather__infos">
+        <div class="more-weather__icon">
+          <i class="fa-solid fa-sun fa-2x"></i>
+          <span class="more-weather__temperature">14°</span>
+          <div class="more-weather__info">
+            <span class="more-weather__compare-yesterday">어제보다 1°C 높아요.</span>
+            <span class="more-weather__dust">미세먼지
+              <span class="more-weather__dust-degree">보통</span>
+            </span>
+        </div>
+        </div>
+        
+        <div class="more-weather__locate-icon">
+          <i class="fa-solid fa-location-crosshairs fa-lg"></i>
+        </div>
+      </div>
+    </div>
   </main>
   <script src="https://kit.fontawesome.com/4d6598f145.js" crossorigin="anonymous"></script>
 </body>
