--- a/chats.html
+++ b/chats.html
@@ -59,6 +59,9 @@
       </div>
     </a>
   </main>
+  <div id="no-mobile">
+    <span>🚫Your Screen is too big🚫</span>
+  </div>
   <script src="https://kit.fontawesome.com/4d6598f145.js" crossorigin="anonymous"></script>
 </body>
 </html>
