--- a/find.html
+++ b/find.html
@@ -88,6 +88,9 @@
     </div>
    </div>
   </main>
+  <div id="no-mobile">
+    <span>🚫Your Screen is too big🚫</span>
+  </div>
   <script src="https://kit.fontawesome.com/4d6598f145.js" crossorigin="anonymous"></script>
 </body>
 </html>
