--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
     <input type="submit" value="Sign up" />
     <a href="#">계정을 잊어버리셨나요?</a>
   </form>
-  
+  <div id="no-mobile">
+    <span>🚫Your Screen is too big🚫</span>
+  </div>
   <script src="https://kit.fontawesome.com/4d6598f145.js" crossorigin="anonymous"></script>
 </body>
 </html>
