--- a/settings.html
+++ b/settings.html
@@ -70,6 +70,9 @@
       </li>
     </ul>
   </main>
+  <div id="no-mobile">
+    <span>🚫Your Screen is too big🚫</span>
+  </div>
   <script src="https://kit.fontawesome.com/4d6598f145.js" crossorigin="anonymous"></script>
 </body>
 </html>
